@@ -3,6 +3,8 @@ UNRELEASED, S3QL TIP
   * Network errors that occur in the middle of a read operation
     are now handled correctly as well.
 
+  * s3qladm now uses cached metadata if available.
+
 2011-10-04, S3QL 1.3
 
   * Fixed an s3qlcp crash happening when source or destination inode
